# iS3D2

./: README.md  cleanMakeCPU.sh  clear_results.sh  myscript.pbs  myscript_omp.pbs  particlization.sh  runGPU.sh  test_omp.sh
PDG/: chosen_particles.sh
documentation/: note.txt
scripts/: histogram_event.py
scripts/modified_distribution/: run_all_central.sh  run_all_noncentral.sh  run_modified_distribution_central.sh  run_modified_distribution_noncentral.sh
src/: iS3D.e
src/cpp/: AnisoVariables.cpp  AnisoVariables.h  Arsenal.cpp  BinSampledParticle.cpp  CMakeLists.txt  DeltafData.cpp  DeltafData.h  EmissionFunction.cpp  EmissionFunction.h  GNUmakefile  GaussThermal.cpp  LocalRestFrame.cpp  LocalRestFrame.h  Macros.h  Main.cpp  Momentum.cpp  Momentum.h  MomentumSpectra.cpp  ParameterReader.cpp  Particle.h  ParticleSampler.cpp  Polarization.cpp  RuniS3D.cpp  SampledParticle.h  SpacetimeDistribution.cpp  Table.cpp  Table.h  arsenal.cpp  arsenal.h  deltafReader.cpp  emissionfunction.cpp  emissionfunction.h  emissionfunction_sampling_kernels.cpp  emissionfunction_smooth_kernels.cpp  iS3D.cpp  iS3D.e  iS3D.h  readindata.cpp  readindata.h
src/cpp/jail/: EmissionFunction.h  emissionfunction_resonance_decays.cpp
tables/: readme.txt
tables/all_tables/pT/: generate pT uniform table.nb
tests/modified_distribution/: README.txt
tests/modified_distribution/central/tables/: things_to_do.rtf
